objects/Staff_Evaluation__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Evaluation_Conducted__c</fullName>
        <label>Date Evaluation Conducted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Conducted_By__c</fullName>
        <label>Evaluation Conducted By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_Results_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Have Evaluation Results Been Uploaded to Content?</description>
        <inlineHelpText>Have Evaluation Results Been Uploaded to Content?</inlineHelpText>
        <label>Are Eval Results in Content?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_The_Evaluation_Been_Conducted__c</fullName>
        <label>Has the Evaluation Been Conducted?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_The_Evaluation_Been_Conducted__c</fullName>
        <label>Have The Evaluation Been Conducted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff_Evaluation_Conducted__c</fullName>
        <label>Staff Evaluation Conducted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Staff Evaluations</relationshipLabel>
        <relationshipName>Staff_Evaluations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Staff Evaluation</label>
    <nameField>
        <displayFormat>{0}-{MM}{DD}{YYYY}</displayFormat>
        <label>Staff Evaluation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff Evaluations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>